Replace Collections.singletonMap with Map.of